k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: horizon-bot-docs
spec:
  selector:
    app: horizon-bot-docs
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
