k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: horizon-bot-docs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: lb-fsn-1.diamondforge.me
    traefik.ingress.kubernetes.io/router.middlewares: horizon-bot-docs-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - docs.horizon-bot.me
    secretName: horizon-bot-docs-tls
  rules:
  - host: docs.horizon-bot.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: horizon-bot-docs
            port:
              number: 80
